--- a/OnlineShopping/pom.xml
+++ b/OnlineShopping/pom.xml
@@ -8,7 +8,7 @@
   <name>OnlineShopping Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <properties>
-  	<spring-version>4.3.12.RELEASE</spring-version>
+  	<spring-version>4.3.14.RELEASE</spring-version>
   	<jackson.databind-version>2.8.10</jackson.databind-version>
   </properties>
    <dependencies>
@@ -70,7 +70,12 @@
     <artifactId>spring-jdbc</artifactId>
     <version>${spring-version}</version>
 </dependency>
-
+<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-orm</artifactId>
+    <version>${spring-version}</version>
+</dependency>
 
 <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 <dependency>
