--- a/OnlineShopping/pom.xml
+++ b/OnlineShopping/pom.xml
@@ -141,6 +141,14 @@
 			<version>${jackson.databind-version}</version>
 		</dependency>
 
+ <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+ <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.8.10</version>
+</dependency>
+
+
 <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
 <dependency>
     <groupId>commons-io</groupId>
